[#77516108] Shrink dropdown menu width to 960px fixed to avoid too much spacing on large screens

--- a/app/assets/stylesheets/express_admin/components/_megadropdown.sass
+++ b/app/assets/stylesheets/express_admin/components/_megadropdown.sass
@@ -8,7 +8,7 @@
 .top-bar-section .dropdown li
   .megamenu-container
     padding: 20px
-    max-width: 100%
+    width: 960px
     background-color: #fff
     border:
       left: 2px solid $border-color
